add docker compose dev + login and signup flow

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -13,6 +13,13 @@ RUN dotnet publish -c Release -o out
 # Build runtime image
 FROM mcr.microsoft.com/dotnet/aspnet:8.0
 WORKDIR /app
+
+# Install netcat for database connectivity check
+RUN apt-get update && apt-get install -y netcat-openbsd && rm -rf /var/lib/apt/lists/*
+
 COPY --from=build /app/out ./
+COPY entrypoint.sh ./
+RUN chmod +x entrypoint.sh
+
 EXPOSE 80
-ENTRYPOINT ["dotnet", "LiveSentiment.dll"] 
+ENTRYPOINT ["./entrypoint.sh"] 
