Simplify Dockerfile to fix build context issues

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,13 +2,10 @@
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /app
 
-# Copy csproj and restore as distinct layers
-COPY LiveSentiment.csproj ./
-RUN dotnet restore
-
-# Copy everything else and build
+# Copy everything and restore
 COPY . ./
-RUN dotnet publish LiveSentiment.csproj -c Release -o out
+RUN dotnet restore
+RUN dotnet publish -c Release -o out
 
 # Build runtime image
 FROM mcr.microsoft.com/dotnet/aspnet:8.0
