Finalize Dockerfile for Render deployment with backend root directory

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,18 +2,13 @@
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /app
 
-# Copy everything and restore
+# Copy csproj and restore as distinct layers
+COPY *.csproj ./
+RUN dotnet restore
+
+# Copy everything else and build
 COPY . ./
-
-# List files to debug
-RUN ls -la
-
-# Try to find the project file
-RUN find . -name "*.csproj" -type f
-
-# Restore with explicit project file
-RUN dotnet restore LiveSentiment.csproj
-RUN dotnet publish LiveSentiment.csproj -c Release -o out
+RUN dotnet publish -c Release -o out
 
 # Build runtime image
 FROM mcr.microsoft.com/dotnet/aspnet:8.0
