--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -10,5 +10,7 @@ RUN npm run build
 FROM nginx:alpine
 # Copy Vite build output (dist) to Nginx's html directory
 COPY --from=build /app/dist /usr/share/nginx/html
+# Copy custom Nginx configuration for SPA routing
+COPY nginx.conf /etc/nginx/conf.d/default.conf
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"] 
