--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -6,9 +6,10 @@ services:
       context: ./backend
       dockerfile: Dockerfile.dev
     ports:
-      - "5000:80"
+      - "5000:5000"
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
+      - DOTNET_RUNNING_IN_CONTAINER=true
       - ConnectionStrings__DefaultConnection=Host=db;Database=livesentiment;Username=postgres;Password=postgres
     volumes:
       - ./backend:/app
