--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,9 +19,11 @@
     "@mui/icons-material": "^7.3.1",
     "@mui/material": "^7.2.0",
     "@types/qrcode": "^1.5.5",
+    "chart.js": "^4.5.1",
     "date-fns": "^4.1.0",
     "qrcode": "^1.5.4",
     "react": "^19.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^6.30.1"
   },
