feat: Update backend controllers and database models
- Update AudienceController with new analysis endpoints
- Enhance LivePresentationController with real-time features
- Add HealthController for system monitoring
- Update database models and migrations for response analysis
- Configure SignalR hub for real-time communication
- Update app settings for NLP service configuration

--- a/backend/appsettings.Development.json
+++ b/backend/appsettings.Development.json
@@ -2,10 +2,17 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "LiveSentiment.Services.GroqNLPService": "Information",
+      "LiveSentiment.Services.HuggingFaceNLPService": "Information",
+      "LiveSentiment.Services.HybridNLPService": "Information",
+      "LiveSentiment.Services.ResponseAnalysisService": "Information"
     }
   },
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5432;Database=livesentiment;Username=postgres;Password=postgres;Pooling=true;Minimum Pool Size=0;Maximum Pool Size=100;"
+  },
+  "Groq": {
+    "Model": "llama-3.3-70b-versatile"
   }
 }
