--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -2,7 +2,11 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "LiveSentiment.Services.GroqNLPService": "Information",
+      "LiveSentiment.Services.HuggingFaceNLPService": "Information",
+      "LiveSentiment.Services.HybridNLPService": "Information",
+      "LiveSentiment.Services.ResponseAnalysisService": "Information"
     }
   },
   "AllowedHosts": "*",
@@ -10,5 +14,8 @@
     "Key": "your-super-secret-key-with-at-least-32-characters-for-jwt-signing",
     "Issuer": "LiveSentiment",
     "Audience": "LiveSentiment"
+  },
+  "Groq": {
+    "Model": "llama-3.3-70b-versatile"
   }
 }
